...
    Row (modifier = Modifier
        .navigationBarsPadding()
        .fillMaxWidth()
        .height(60.dp)
        ) {
        ButtonMain(image = R.drawable.busqueda,
            imageDescription = "Search",
            modifier = Modifier.weight(1f).fillMaxHeight(),
            route = AppScreens.MainScreen.route,
            navController = navController,
            searcherViewModel = searcherViewModel)
        ButtonMain(image = R.drawable.agregar,
            imageDescription = "Post",
...
                    style = MaterialTheme.typography.headlineLarge,
                    fontWeight = FontWeight.Bold,
                    modifier = Modifier.align(Alignment.CenterHorizontally)
                )

                SearchField(
                    label = "Origin",
                    value = searcherViewModel.searcherOrigin,
                    icon = Icons.Filled.Place,
                    onClick = {
                        searcherViewModel.isOrigin = true
                        navController.navigate(AppScreens.PlaceSelectorScreen.route)
                    }
                )

                SearchField(
                    label = "Destination",
                    value = searcherViewModel.searcherDestination,
                    icon = Icons.Filled.Place,
                    onClick = {
                        searcherViewModel.isOrigin = false
                        navController.navigate(AppScreens.PlaceSelectorScreen.route)
                    }
                )

                SearchField(
                    label = "Week",
                    value = if (searcherViewModel.searcherStartOfWeek != null && searcherViewModel.searcherEndOfWeek != null) {
                        "From ${searcherViewModel.searcherStartOfWeek} to ${searcherViewModel.searcherEndOfWeek}"
                    } else {
                        "Select a week"
                    },
                    icon = Icons.Default.CalendarToday,
...
