...

    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        text = "Found Trips",
                        style = MaterialTheme.typography.headlineMedium,
                        fontWeight = FontWeight.SemiBold,
                        color = Color(0xFF0277BD)
                    )
                },
                navigationIcon = {
...
            }
        } else {
            LazyColumn(
                modifier = Modifier
                    .fillMaxSize()
                    .padding(paddingValues)
                    .testTag("tripsList")
            ) {
                items(trips) { trip ->
                    TripCard(trip, navController, searcherViewModel)
                }
            }
        }
...
