...
        OutlinedTextField(
            value = searcherViewModel.searcherPlace,
            onValueChange = { newPlace ->
                searcherViewModel.searcherPlace = newPlace
                searcherViewModel.onPlaceChange(newPlace)
            },
            label = { Text("Write the full address") },
            leadingIcon = {
                Icon(imageVector = Icons.Filled.Search, contentDescription = "Search Icon", tint = MaterialTheme.colorScheme.primary)
            },
            trailingIcon = {
                if (searcherViewModel.searcherPlace.isNotEmpty()) {
                    IconButton(onClick = { searcherViewModel.searcherPlace = "" }) {
...
                    }
                }
            },
            modifier = Modifier
                .fillMaxWidth()
                .background(Color.White, shape = RoundedCornerShape(8.dp))
                .testTag("placeTextField"),
            shape = RoundedCornerShape(12.dp)
        )

        Spacer(modifier = Modifier.height(16.dp))

        AnimatedVisibility(visible = searcherViewModel.searcherPredictions.isNotEmpty()) {
...
